samples/_failures_safe/1761718010_3e4d16_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b9dabce.c: In function ‘main’:
./samples/SAFE/__tmp_4b9dabce.c:150:12: error: missing terminating " character
  150 |     printf("\nMatrix Multiplication:\
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4b9dabce.c:150:5: error: expected expression at end of input
  150 |     printf("\nMatrix Multiplication:\
      |     ^~~~~~
./samples/SAFE/__tmp_4b9dabce.c:150:5: error: expected declaration or statement at end of input
